# SSD-Labs

lab1/: .gitlab-ci.yml  docker-compose.yml  report-jsonformatter.txt  report.md
lab2/: .gitignore  pyproject.toml  report.md
lab3/: hash.c  program1.c  program2.c  program3.c  program4.c  report.md
lab4/: .gitignore  main.py  report.md
lab4/input/: input.txt
lab5/: docker-compose.yml  report.md
lab5/custom_rules/: custom-rule.conf
